k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automacao
  labels:
    app.kubernetes.io/name: automacao
